--- a/Play_Store_App_Review_Analysis.ipynb
+++ b/Play_Store_App_Review_Analysis.ipynb
@@ -5,26 +5,14 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "yQaldy8SH6Dl",
         "tb3IE7fSDSmF",
         "MSa1f5Uengrz",
-        "0wOQAZs5pc--",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
         "448CDAPjqfQr",
-        "KSlN3yHqYklG",
         "t6dVpIINYklI",
         "ijmpgYnKYklI",
         "-JiQyfWJYklI",
-        "EM7whBJCYoAo",
-        "fge-S5ZAYoAp",
-        "85gYPyotYoAp",
-        "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
-        "iky9q4vBYrdO",
         "F6T5p64dYrdO",
         "y-Ehk30pYrdP",
-        "bamQiAODYuh1",
         "QHF8YVU7Yuh3",
         "GwzvFGzlYuh3",
         "qYpmQ266Yuh3",
@@ -36,13 +24,9 @@
         "t27r6nlMphqO",
         "r2jJGEOYphqO",
         "b0JNsNcRphqO",
-        "BZR9WyysphqO",
         "jj7wYXLtphqO",
         "eZrbJ2SmphqO",
         "rFu4xreNphqO",
-        "YJ55k-q6phqO",
-        "U2RJ9gkRphqQ",
-        "NC_X3p0fY2L0",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -81,9 +65,9 @@
       "source": [
         "##### **Project Type**    - EDA (Exploratory Data Analysis)\n",
         "##### **Contribution**    - Team\n",
-        "##### **Team Member 1 -**  Umesh Makkar\n",
+        "##### **Team Member 1 -**  Tanmay Tilwani\n",
         "##### **Team Member 2 -**  Soni Verma\n",
-        "##### **Team Member 3 -**  Tanmay"
+        "##### **Team Member 3 -**  Umesh Makkar"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
@@ -119,7 +103,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://github.com/Umesh2851997/Playstore_project/blob/main/EDA_Play_Store_App_Review_Analysis.ipynb"
+        "https://github.com/tanmay-tilwani/capstone-project-1-playstore-anaylysis"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
